Add new microblaze_fpga BSP to run on FPGAs. The new BSP can be built successfully but not tested

--- a/c/src/lib/libbsp/microblaze/configure.ac
+++ b/c/src/lib/libbsp/microblaze/configure.ac
@@ -1,14 +1,12 @@
 ## Process this file with autoconf to produce a configure script.
-##
-## $Id: configure.ac,v 1.19 2011/02/02 14:57:41 ralf Exp $
 
-AC_PREREQ([2.68])
+AC_PREREQ([2.69])
 AC_INIT([rtems-c-src-lib-libbsp-microblaze],[_RTEMS_VERSION],[http://www.rtems.org/bugzilla])
-AC_CONFIG_SRCDIR([../microblaze])
+AC_CONFIG_SRCDIR([microblaze_fpga])
 RTEMS_TOP(../../../../..)
 
 RTEMS_CANONICAL_TARGET_CPU
-AM_INIT_AUTOMAKE([no-define foreign 1.11.1])
+AM_INIT_AUTOMAKE([no-define foreign 1.12.2])
 AM_MAINTAINER_MODE
 
 RTEMS_ENV_RTEMSBSP
@@ -19,3 +17,4 @@ RTEMS_CHECK_BSPDIR([$RTEMS_BSP_FAMILY])
 # Explicitly list all Makefiles here
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
+
