--- a/cpukit/score/cpu/microblaze/Makefile.am
+++ b/cpukit/score/cpu/microblaze/Makefile.am
@@ -13,6 +13,8 @@ include_rtems_score_HEADERS = rtems/score/cpu.h rtems/score/microblaze.h \
 
 noinst_LIBRARIES = libscorecpu.a
 libscorecpu_a_SOURCES = cpu.c cpu_asm.c
+libscorecpu_a_SOURCES += microblaze-context-switch.S
+
 libscorecpu_a_CPPFLAGS = $(AM_CPPFLAGS)
 
 include $(srcdir)/preinstall.am
